=== HEAD

* Add :max_length entry to column schema hashes for string types (jeremyevans)

* Add :before_thread_exit option to Database#listen_for_static_cache_updates in pg_static_cache_updater extension (jeremyevans)

* Add Database#values on PostgreSQL to create a dataset that uses VALUES instead of SELECT (jeremyevans)

* Add Model#set_nested_attributes to nested_attributes, allowing setting nested attributes options per-call (jeremyevans)

* Use explicit columns when using automatically prepared SELECT statements in the prepared statement plugins (jeremyevans)

* Make Dataset#insert_select on PostgreSQL respect existing RETURNING clause (jeremyevans)

* Fix eager loading limited associations via a UNION when an association block is used (jeremyevans)

* Associate reciprocal object before saving associated object when creating new objects in nested_attributes (chanks, jeremyevans) (#831)

* Handle intervals containing more than 100 hours in the pg_interval extension's parser (will) (#827)

* Remove methods/class deprecated in 4.11.0 (jeremyevans)

* Allow Dataset#natural_join/cross_join and related methods to take a options hash passed to join_table (jeremyevans)

* Add :reset_implicit_qualifier option to Dataset#join_table, to set false to not reset the implicit qualifier (jeremyevans)

* Support :notice_receiver Database option when postgres adapter is used with pg driver (jeltz, jeremyevans) (#825)

=== 4.11.0 (2014-06-03)

* Add :model_map option to class_table_inheritance plugin so class names don't need to be stored in the database (jeremyevans)

* Set version when using for MySQL/SQLite emulation in the mock adapter (jeremyevans)

* Add support for CUBRID/SQLAnywhere emulation to the mock adapter (jeremyevans)

* Add support for the jsonb operators added in PostgreSQL 9.4 to the pg_json_ops extension (jeremyevans)

* Add support for new json/jsonb functions added in PostgreSQL 9.4 to the pg_json_ops extension (jeremyevans)
